# what-moves-the-eyes

./: .gitignore  LICENSE  README.md  pyproject.toml
container/: container.def  install-packages.R  requirements.txt
datasets/COCO-Freeview/: get_dataset.py
datasets/DAEMONS/: get_dataset.py
datasets/MIT1003/: get_dataset.py
datasets/PotsdamCorpus/: get_dataset.py
deepgaze_vs_scenewalk/configs/: example_DAEMONS_classic_config.yaml  example_DAEMONS_config.yaml  example_MIT_classic_config.yaml  example_MIT_config.yaml
deepgaze_vs_scenewalk/configs/init_params/: SW_X_MIT_init.yaml  classic_MIT_init.yaml  generic_MIT_init.yaml  kuemmerer_classic_MIT_fit.yaml  schwetlick_MIT_fit.yaml
deepgaze_vs_scenewalk/configs/model/: SW_X_MIT.yaml  schuett_MIT.yaml  schwetlick_MIT.yaml
deepgaze_vs_scenewalk/configs/priors/: schwetlick_MIT_priors.yaml  strict_MIT_priors.yaml
deepgaze_vs_scenewalk/gold_standard/: gold_standard.py  pseudo_crossvalidated_gold_standard.py
deepgaze_vs_scenewalk/scenewalk_jax/: jax_model.py  jax_training.py  numpy_model.py  pysaliency_wrapper.py  training_wrappers.py
deepgaze_vs_scenewalk/scenewalk_jax/utils/: crossval_utils.py  load_data.py
docs/: index.html
models/SceneWalk_X/COCO-Freeview/: config.yaml  run.py
models/SceneWalk_X/DAEMONS/: config.yaml
models/SceneWalk_X/MIT1003/: config.yaml  run.py
models/SceneWalk_X/PotsdamCorpus/: config.yaml
models/SceneWalk_attention_bias/COCO-Freeview/: config.yaml
models/SceneWalk_attention_bias/DAEMONS/: config.yaml
models/centerbias/MIT1003/: run.py  (+1 more)
website/: README.md  index.html
(+89 files in other folders)
